Change image format from PNG to JPG

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                 </ul>
                 <p class="text-gray-300 mt-4">Una gráfica de resultados acompaña los datos para una mejor visualización del progreso.</p>
             </div>
-            <img src="imagenes/grafica.png" alt="Gráfica de seguimiento de progreso" class="w-full rounded-xl shadow-lg mt-4">
+            <img src="imagenes/grafica.jpg" alt="Gráfica de seguimiento de progreso" class="w-full rounded-xl shadow-lg mt-4">
         </div>
     </div>
 </section>
